<resources>
    <string name="April">April</string>
    <string name="August">August</string>
    <string name="BannerId">ca-app-pub-7895691684736135/4670908064</string>
    <string name="Categories">Categories</string>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="December">December</string>
    <string name="February">February</string>
    <string name="Info">Info</string>
    <string name="Instagram_label">Instagram</string>
    <string name="InvalidServerLogin">Please enter a valid server address</string>
    <string name="January">January</string>
    <string name="July">July</string>
    <string name="June">June</string>
    <string name="LatestMovies">Latest Movies</string>
    <string name="March">March</string>
    <string name="May">May</string>
    <string name="MostRated">Most Rated</string>
    <string name="MostWatched">Most Watched</string>
    <string name="NoResultFound">No Result Found</string>
    <string name="November">November</string>
    <string name="October">October</string>
    <string name="Player_BpsQuality_Auto">Auto</string>
    <string name="Player_CloseCaptionSelector_None">None</string>
    <string name="Rate">Rate</string>
    <string name="September">September</string>
    <string name="SortFromAtoZ">Sort From A to Z</string>
    <string name="Utcchangedto">Utc changed to</string>
    <string name="VO_OSMP_CB_ERROR">Unknown error!</string>
    <string name="VO_OSMP_CB_LICENSE_FAIL">License check failed!</string>
    <string name="VO_OSMP_SRC_ADAPTIVE_STREAMING_ERROR_EVENT_PLAYLIST_PARSEFAIL">Play list parse failed</string>
    <string name="VO_OSMP_SRC_ADAPTIVE_STREAMING_ERROR_EVENT_PLAYLIST_UNSUPPORTED">Play list not supported</string>
    <string name="VO_OSMP_SRC_ADAPTIVE_STREAMING_ERROR_EVENT_STREAMING_DOWNLOADFAIL">Stream download failed</string>
    <string name="VO_OSMP_SRC_ADAPTIVE_STREAMING_ERROR_EVENT_STREAMING_DRMLICENSEERROR">Stream DRM error</string>
    <string name="VO_OSMP_SRC_ADAPTIVE_STREAMING_ERROR_EVENT_STREAMING_UNSUPPORTED">Stream not supported</string>
    <string name="VO_OSMP_SRC_ADAPTIVE_STREAMING_ERROR_EVENT_STREAMING_VOLIBLICENSEERROR">Stream license error</string>
    <string name="VO_OSMP_SRC_CB_CONNECTION_FAIL">Source connection failed!</string>
    <string name="VO_OSMP_SRC_CB_CONNECTION_REJECTED">Maximum number of connections was reached, Currently used for RTSP only!</string>
    <string name="VO_OSMP_SRC_CB_DOWNLOAD_FAIL">Source download failed!</string>
    <string name="VO_OSMP_SRC_CB_DRM_AV_OUT_FAIL">Device uses A/V output device but the content license does not allow it. Playback stopped</string>
    <string name="VO_OSMP_SRC_CB_DRM_FAIL">DRM engine error!</string>
    <string name="VO_OSMP_SRC_CB_DRM_NOT_SECURE">Device is rooted/jailbroken, DRM not secure!</string>
    <string name="VO_OSMP_SRC_CB_PLAYLIST_PARSE_ERR">Play list parse error!</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_app">About Application</string>
    <string name="about_device">About device</string>
    <string name="about_ip">IP</string>
    <string name="about_network">About network</string>
    <string name="account_app_version">App Version</string>
    <string name="account_info">Account Info</string>
    <string name="account_label">Account</string>
    <string name="account_language">Language</string>
    <string name="account_logout">Logout</string>
    <string name="account_rate_review">Rate &amp; Review on the Play Store</string>
    <string name="account_share_tibo">Share TiBO</string>
    <string name="action_buy">Buy</string>
    <string name="action_cicked">Action clicked. Implement your own handler.</string>
    <string name="action_movie_free">This movie is free.</string>
    <string name="action_not_possible">Sorry, this action is not possible for the moment</string>
    <string name="action_play">Play</string>
    <string name="action_related">Related</string>
    <string name="action_settings">Settings</string>
    <string name="action_trailer">Trailer</string>
    <string name="actual_password">Current Password</string>
    <string name="ad_tag_url" formatted="false">https://pubads.g.doubleclick.net/gampad/ads?sz=640x480&amp;iu=/124319096/external/single_ad_samples&amp;ciu_szs=300x250&amp;impl=s&amp;gdfp_req=1&amp;env=vp&amp;output=vast&amp;unviewed_position_start=1&amp;cust_params=deployment%3Ddevsite%26sample_ct%3Dlinear&amp;correlator=</string>
    <string name="add_new_channel">Add new channel</string>
    <string name="add_new_channel_btnSubmit">Add</string>
    <string name="add_to_list">+List</string>
    <string name="add_to_list_label">Add to List</string>
    <string name="addressnull">Address must not be null!</string>
    <string name="admin_receiver_status">sample</string>
    <string name="admin_receiver_status_disable_warning">sample</string>
    <string name="admin_receiver_status_disabled">sample</string>
    <string name="admin_receiver_status_enabled">sample</string>
    <string name="admin_receiver_status_pw_changed">sample</string>
    <string name="admob_app_id">ca-app-pub-6334154269991885~8651342100</string>
    <string name="adrress">Address</string>
    <string name="adult">Adult</string>
    <string name="all">All</string>
    <string name="all_categories">All Categories</string>
    <string name="all_channels">All Channels</string>
    <string name="all_movies">All Movies</string>
    <string name="all_shows">All Shows</string>
    <string name="any">Any</string>
    <string name="app_link_title_1">App Link Title 1</string>
    <string name="app_link_title_2">App Link Title 2</string>
    <string name="app_name">Bling TV</string>
    <string name="app_name_about">App Name</string>
    <string name="app_type">Application type</string>
    <string name="app_version">App Version</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apperror">Unable to launch app.</string>
    <string name="application_name">Magoware</string>
    <string name="applications">Applications</string>
    <string name="appstab">Apps</string>
    <string name="areyousure">Are you sure?</string>
    <string name="audio">Audio</string>
    <string name="back">Back</string>
    <string name="back_button_content_description">back</string>
    <string name="birthday">Birthday</string>
    <string name="booking_info_title">My Booking</string>
    <string name="booking_orders_title">My Orders</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="buy_1">Buy</string>
    <string name="buy_subscription">Buy Subscription</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="cancelupgrade">Upgrade file is missing. Cancelling upgrade</string>
    <string name="cannot_play">Url cannot be played</string>
    <string name="cannot_play_trailer">Cannot play trailer</string>
    <string name="cannotdothisactioninfavoritcategory">Can not do this action in Favorite category</string>
    <string name="cantgetchannelinfo">"Can't get channel info"</string>
    <string name="cast">Cast</string>
    <string name="cast_ad_label">Ad</string>
    <string name="changeLanguage">Change Language</string>
    <string name="changePlayer">Change Player</string>
    <string name="changepassword">Change Password</string>
    <string name="changepin">Change PIN</string>
    <string name="communication_preferences">Communication Preferences</string>
    <string name="contact_label">Contact</string>
    <string name="country">Country</string>
    <string name="current_status">Get Current Status</string>
    <string name="email">Email</string>
    <string name="enter_pin">Enter Your PIN</string>
    <string name="entercity">Enter city</string>
    <string name="first_name">First name</string>
    <string name="get_network_subtype">Get network subtype</string>
    <string name="guest_login_dialog_label">Oops! You should login first!</string>
    <string name="has_internet_access">Has internet access</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="home_label">Home</string>
    <string name="home_more">More</string>
    <string name="home_news">News</string>
    <string name="home_search">Search</string>
    <string name="is_mobile_connected">Is connected to mobile network</string>
    <string name="is_wifi_connected">Is connected to Wi-Fi</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>
    <string name="mobile_tel">Mobile / Tel</string>
    <string name="mychannels_frag_btnCreate">Add</string>
    <string name="mychannels_frag_channel">Nr.</string>
    <string name="mychannels_frag_description">Description</string>
    <string name="mychannels_frag_stream">Stream</string>
    <string name="mychannels_frag_title">Title</string>
    <string name="next_activity">Next activity</string>
    <string name="password">Password</string>
    <string name="personal_settings_label">Personal Settings</string>
    <string name="phone">Phone</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="privacy_policy_terms">Privacy Policy, Terms &amp; Conditions</string>
    <string name="purchases">Purchases</string>
    <string name="salesreport_frag_combo">Combo</string>
    <string name="salesreport_frag_distributor">Distributor</string>
    <string name="salesreport_frag_duration">Duration</string>
    <string name="salesreport_frag_saledate">Sale Date</string>
    <string name="signup">Sign up</string>
    <string name="signup_page_label">"Don't have an account already? Sign Up now!"</string>
    <string name="subscription">Subscription</string>
    <string name="support_label">Support</string>
    <string name="terms_conditions">By signing up you agree to the terms of service and privacy policy</string>
    <string name="username">Username</string>
</resources>