<?xml version="1.0" encoding="utf-8"?>
<navigation android:id="@id/nav_account" app:startDestination="@id/nav_account"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <fragment android:label="@string/home_more" android:name="com.magoware.magoware.webtv.mobile_homepage.account.ui.AccountFragment" android:id="@id/nav_account">
        <action android:id="@id/action_nav_settings_to_nav_help" app:destination="@id/nav_help" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_settings_to_nav_terms_condition" app:destination="@id/nav_terms_condition" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_settings_to_nav_contact" app:destination="@id/nav_contact" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_account_to_nav_settings" app:destination="@id/nav_settings" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_account_to_nav_account_language" app:destination="@id/nav_account_language" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment android:label="@string/help_support" android:name="com.magoware.magoware.webtv.mobile_homepage.account.HelpFragment" android:id="@id/nav_help" />
    <fragment android:label="@string/privacy_policy_terms" android:name="com.magoware.magoware.webtv.mobile_homepage.account.TermsConditionFragment" android:id="@id/nav_terms_condition" />
    <fragment android:label="@string/contact_label" android:name="com.magoware.magoware.webtv.mobile_homepage.account.ContactFragment" android:id="@id/nav_contact">
        <action android:id="@id/action_nav_contact_to_nav_contact_mobile" app:destination="@id/nav_contact_mobile" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment android:label="@string/mobile_tel" android:name="com.magoware.magoware.webtv.mobile_homepage.account.ContactMobileFragment" android:id="@id/nav_contact_mobile">
        <argument android:name="contactType" android:defaultValue="mobile" app:argType="string" />
    </fragment>
    <fragment android:label="@string/personal_settings_label" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.SettingsFragment" android:id="@id/nav_settings">
        <action android:id="@id/action_nav_settings_to_nav_account_info" app:destination="@id/nav_account_info" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_settings_to_nav_account_purchases" app:destination="@id/nav_account_purchases" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_settings_to_nav_account_subscriptions" app:destination="@id/nav_account_subscriptions" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_settings_to_nav_account_password" app:destination="@id/nav_account_password" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_settings_to_nav_account_notification" app:destination="@id/nav_account_notification" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_settings_to_nav_account_pin" app:destination="@id/nav_account_pin_detail" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <action android:id="@id/action_nav_settings_to_nav_account_player" app:destination="@id/nav_account_player" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment android:label="@string/account_info" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.info.ui.AccountInfoFragment" android:id="@id/nav_account_info" />
    <fragment android:label="@string/changePlayer" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.ChangePlayerFragment" android:id="@id/nav_account_player" />
    <fragment android:label="@string/purchases" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.purchases.ui.AccountPurchasesFragment" android:id="@id/nav_account_purchases" />
    <fragment android:label="@string/subscription" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.subscription.ui.AccountSubscriptionsFragment" android:id="@id/nav_account_subscriptions" />
    <fragment android:label="@string/changepassword" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.AccountPasswordFragment" android:id="@id/nav_account_password" />
    <fragment android:label="@string/communication_preferences" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.AccountNotificationFragment" android:id="@id/nav_account_notification">
        <argument android:name="showNotifications" android:defaultValue="false" app:argType="boolean" />
    </fragment>
    <fragment android:label="@string/changeLanguage" android:name="com.magoware.magoware.webtv.mobile_homepage.account.AccountLanguageFragment" android:id="@id/nav_account_language" />
    <fragment android:label="@string/enter_pin" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.EnterPinFragment" android:id="@id/nav_account_pin">
        <argument android:name="pin" android:defaultValue="" app:argType="string" />
        <argument android:name="showAdult" android:defaultValue="false" app:argType="boolean" />
        <action android:id="@id/action_nav_account_pin_to_nav_account_pin_detail" app:destination="@id/nav_account_pin_detail" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" app:popUpTo="@id/nav_account_pin_detail" app:popUpToInclusive="true">
            <argument android:name="showAdult" android:defaultValue="false" app:argType="boolean" />
            <argument android:name="pin" android:defaultValue="" app:argType="string" />
        </action>
    </fragment>
    <fragment android:label="@string/pin_protection" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.PinDetailFragment" android:id="@id/nav_account_pin_detail">
        <action android:id="@id/action_nav_account_pin_detail_to_nav_account_change_pin" app:destination="@id/nav_account_change_pin" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
        <argument android:name="pin" android:defaultValue="" app:argType="string" />
        <argument android:name="showAdult" android:defaultValue="false" app:argType="boolean" />
        <action android:id="@id/action_nav_account_pin_detail_to_nav_account_settings" app:destination="@id/nav_settings" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" app:popUpTo="@id/nav_settings" app:popUpToInclusive="true" />
        <action android:id="@id/action_nav_account_pin_detail_to_nav_account_pin" app:destination="@id/nav_account_pin" app:enterAnim="@anim/slide_in_right" app:exitAnim="@anim/slide_out_left" app:popEnterAnim="@anim/slide_in_left" app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment android:label="@string/changepin" android:name="com.magoware.magoware.webtv.mobile_homepage.account.settings.ChangePinFragment" android:id="@id/nav_account_change_pin">
        <argument android:name="pin" android:defaultValue="" app:argType="string" />
    </fragment>
</navigation>