<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@android:color/white" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/White1" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TableLayout android:orientation="vertical" android:id="@id/mychannels_frag_table" android:background="@color/White1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:showDividers="middle">
            <TableRow android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip">
                <com.magoware.magoware.webtv.custom_views.JosefinSansText.JosefinSansBoldButton android:textColor="@color/White1" android:id="@id/mychannels_frag_add" android:background="@drawable/confirm_button_personal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mychannels_frag_btnCreate" />
            </TableRow>
            <TableRow android:layout_marginTop="20.0dip">
                <com.magoware.magoware.webtv.custom_views.MagoTextView android:textColor="@color/first_blue" android:paddingLeft="8.0dip" android:layout_width="30.0dip" android:layout_height="wrap_content" android:text="@string/mychannels_frag_channel" />
                <com.magoware.magoware.webtv.custom_views.MagoTextView android:textColor="@color/first_blue" android:layout_width="100.0dip" android:layout_height="wrap_content" android:text="@string/mychannels_frag_title" />
                <com.magoware.magoware.webtv.custom_views.MagoTextView android:textColor="@color/first_blue" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/mychannels_frag_description" />
                <com.magoware.magoware.webtv.custom_views.MagoTextView android:textColor="@color/first_blue" android:layout_width="120.0dip" android:layout_height="wrap_content" android:text="@string/mychannels_frag_stream" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>