<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip">
        <TableLayout android:orientation="vertical" android:id="@id/salesreport_frag_table" android:layout_width="fill_parent" android:layout_height="fill_parent" android:showDividers="middle">
            <TableRow android:layout_marginTop="50.0dip" android:layout_marginBottom="15.0dip">
                <com.magoware.magoware.webtv.custom_views.MagoTextView android:textSize="13.0sp" android:textColor="@color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/salesreport_frag_combo" android:layout_weight="28.0" />
                <com.magoware.magoware.webtv.custom_views.MagoTextView android:textSize="13.0sp" android:textColor="@color/white" android:id="@id/sale_distributor" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/salesreport_frag_distributor" android:layout_weight="25.0" />
                <com.magoware.magoware.webtv.custom_views.MagoTextView android:textSize="13.0sp" android:textColor="@color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/salesreport_frag_saledate" android:layout_weight="25.0" />
                <com.magoware.magoware.webtv.custom_views.MagoTextView android:textSize="13.0sp" android:textColor="@color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/salesreport_frag_duration" android:layout_weight="22.0" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>