<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/signup_constraint" android:background="@color/colorPrimaryDark" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar android:theme="?actionBarTheme" android:id="@id/signup_toolbar" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="?actionBarSize" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:navigationIcon="@drawable/baseline_arrow_back_24" app:title="@string/signup" app:titleTextColor="@android:color/white" />
    <ImageView android:id="@id/signup_background_image" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <ScrollView android:id="@id/scrollView2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dp_30" android:layout_marginRight="@dimen/dp_30" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/signup_toolbar">
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/signup_native_view" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_24dp">
            <TextView android:textSize="@dimen/dimen_24dp" android:textColor="@color/colorWhite80" android:gravity="center" android:padding="@dimen/dimen_4dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_8dp" android:text="@string/signup_page_label" android:fontFamily="@font/roboto_medium" />
            <EditText android:textColor="@color/white" android:textColorHint="@color/colorWhite50" android:gravity="center" android:layout_gravity="center" android:id="@id/first_name" android:background="@drawable/round_input_border" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_margin="@dimen/dimen_4dp" android:hint="@string/first_name" android:ems="10" android:singleLine="true" android:maxLength="26" android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" android:inputType="textCapWords" android:imeOptions="actionNext" android:fontFamily="@font/roboto" />
            <EditText android:textColor="@color/white" android:textColorHint="@color/colorWhite50" android:gravity="center" android:layout_gravity="center" android:id="@id/last_name" android:background="@drawable/round_input_border" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_margin="@dimen/dimen_4dp" android:hint="@string/last_name" android:ems="10" android:singleLine="true" android:maxLength="26" android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" android:inputType="textCapWords" android:imeOptions="actionNext" android:fontFamily="@font/roboto" />
            <EditText android:textColor="@color/white" android:textColorHint="@color/colorWhite50" android:gravity="center" android:layout_gravity="center" android:id="@id/email" android:background="@drawable/round_input_border" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_margin="@dimen/dimen_4dp" android:hint="@string/email" android:ems="40" android:inputType="textEmailAddress" android:imeOptions="actionNext" android:fontFamily="@font/roboto" />
            <EditText android:textColor="@color/white" android:textColorHint="@color/colorWhite50" android:gravity="center" android:layout_gravity="center" android:id="@id/phone" android:background="@drawable/round_input_border" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_margin="@dimen/dimen_4dp" android:hint="@string/phone" android:ems="10" android:inputType="phone" android:imeOptions="actionNext" android:fontFamily="@font/roboto" />
            <EditText android:textColor="@color/white" android:textColorHint="@color/colorWhite50" android:gravity="center" android:layout_gravity="center" android:id="@id/username" android:background="@drawable/round_input_border" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_margin="@dimen/dimen_4dp" android:hint="@string/username" android:ems="10" android:inputType="textPersonName" android:imeOptions="actionNext" android:fontFamily="@font/roboto" />
            <EditText android:textColor="@color/white" android:textColorHint="@color/colorWhite50" android:gravity="center" android:layout_gravity="center" android:id="@id/password" android:background="@drawable/round_input_border" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_margin="@dimen/dimen_4dp" android:hint="@string/password" android:ems="10" android:inputType="textPassword" android:imeOptions="actionNext" android:fontFamily="@font/roboto" />
            <Spinner android:layout_gravity="center" android:id="@id/country_spinner" android:background="@drawable/round_input_border_focusable" android:focusable="true" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_margin="@dimen/dimen_4dp" android:prompt="@string/country" android:imeOptions="actionNext" android:spinnerMode="dropdown" android:textAlignment="center" />
            <EditText android:textColor="@color/white" android:textColorHint="@color/colorWhite50" android:gravity="center" android:layout_gravity="center" android:id="@id/city" android:background="@drawable/round_input_border" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_margin="@dimen/dimen_4dp" android:hint="@string/entercity" android:ems="10" android:maxLength="26" android:inputType="textCapWords" android:imeOptions="actionDone" android:fontFamily="@font/roboto" />
            <Button android:textColor="@android:color/black" android:layout_gravity="center" android:id="@id/signup_button" android:background="@drawable/dynamic_round_button_background" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_40dp" android:layout_marginTop="@dimen/dimen_16dp" android:text="@string/signup" android:textAllCaps="false" />
            <com.magoware.magoware.webtv.custom_views.MagoTextView android:textColor="@drawable/focustext" android:gravity="center" android:layout_gravity="center" android:id="@id/terms_and_conditions" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8dp" android:text="@string/terms_conditions" android:fontFamily="@font/roboto_bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>